# 2030b-browser

./: .gitignore  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ETHICS.md  LICENSE  LICENSE-Browser2030B-1.0.md  LICENSE-ML-1.0.md  LICENSE-ML-1.1.md  README.md  SECURITY.md  WORKSPACE.bazel  bootstrap  bootstrap.ps1  build  build.ps1  deny.toml  package.json  rust-toolchain.toml  tsconfig.base.json  vitest.config.ts
admin/audit-log/: README.md
admin/mdm-connectors/: README.md
admin/policy-engine/: Cargo.toml
admin/policy-engine/examples/: content-input.json  network-input.json
admin/policy-engine/policies/: ai_data.rego  compliance.rego  content_policy.rego  extensions.rego  identity.rego  network.rego  privacy.rego  security.rego  ui_ux.rego  update_channel.rego
admin/policy-engine/src/: audit.rs  lib.rs  main.rs  precedence.rs  provenance.rs  signing.rs
admin/schemas/: ai-data.schema.json  compliance.schema.json  content-policy.schema.json  extensions.schema.json  identity.schema.json  network.schema.json  privacy.schema.json  security.schema.json  ui-ux.schema.json  update-channel.schema.json
ai/agent-runtime/: Cargo.toml
ai/agent-runtime/src/: did.rs  journal.rs  lib.rs
ai/copilot/: README.md
ai/local-models/: README.md  captions.md  safe_browsing.md  spellcheck.md  translation.md
ai/mcp-host/: Cargo.toml
ai/mcp-host/src/: lib.rs
ai/redaction/: Cargo.toml
ai/redaction/src/: lib.rs
ci/: ml-1.0.sha256  ml-1.1.sha256
ci/workflows/: README.md  build.yml  fuzz.yml  lint.yml  ml-compliance.yml  perf.yml  release.yml  sandbox.yml  test.yml
cloud/wasm-edition/: package.json
cloud/wasm-edition/src/: index.test.ts  index.ts
docs/: 00-architecture.md  01-feature-parity-matrix.md  02-admin-layer-spec.md  03-security-privacy-threat-model.md  04-2030-forward-features.md  05-extension-ecosystem.md  06-ui-ux-spec.md  07-performance-budgets.md  08-test-plan.md  09-deployment.md  10-licensing-and-ethics.md  11-windows-build-guide.md  12-nextgen-ui.md  BUILD-BRIEF.md
engine/blink-integration/: Cargo.toml
engine/blink-integration/src/: fingerprint.rs  lib.rs  renderer_selector.rs  site_isolation.rs  tee.rs  throttling.rs
engine/gecko-integration/: Cargo.toml
engine/gecko-integration/src/: fission.rs  lib.rs
engine/gpu/: Cargo.toml
engine/gpu/src/: capture.rs  compositor.rs  energy.rs  lib.rs
engine/ipc/: Cargo.toml
engine/ipc/src/: lib.rs
engine/net/: Cargo.toml
engine/net/src/: https_only.rs  lib.rs  pqc.rs  tls.rs  tracking_protection.rs
engine/spidermonkey-bindings/: Cargo.toml
engine/spidermonkey-bindings/src/: lib.rs
engine/storage/: Cargo.toml
engine/storage/src/: lib.rs  memory_saver.rs  semantic_history.rs  site_settings.rs
engine/v8-bindings/: Cargo.toml
engine/v8-bindings/src/: lib.rs
extensions/mv2-shim/: Cargo.toml
extensions/mv2-shim/src/: lib.rs
extensions/mv3-host/: Cargo.toml
extensions/mv3-host/src/: lib.rs
extensions/mv4-host/: Cargo.toml
extensions/mv4-host/src/: lib.rs
extensions/policy-bridge/: Cargo.toml
extensions/policy-bridge/src/: lib.rs
extensions/store-client/: package.json
extensions/store-client/src/: index.test.ts  index.ts
mobile/android/: README.md  build.gradle.kts
mobile/android/src/main/: AndroidManifest.xml
mobile/android/src/main/kotlin/ai/b2030b/android/: BrowserActivity.kt  SecurityPolicy.kt
mobile/android/src/test/kotlin/ai/b2030b/android/: SecurityPolicyTest.kt
mobile/ios/: Package.swift  README.md
mobile/ios/Sources/Browser2030BCore/: SecurityPolicy.swift  TabModel.swift
mobile/ios/Tests/Browser2030BCoreTests/: SecurityPolicyTests.swift  TabModelTests.swift
packaging/android-aab/: README.md
packaging/flatpak/: ai.b2030b.shell.yaml
packaging/ios-ipa/: ExportOptions.plist  README.md
packaging/linux-deb/: b2030b.desktop  build-deb.sh  control
packaging/linux-rpm/: b2030b.spec
packaging/macos-pkg/: build-pkg.sh
packaging/snap/: snapcraft.yaml
packaging/windows-msi/: b2030b.wxs
sync/client/: Cargo.toml
sync/client/src/: lib.rs
sync/e2ee/: Cargo.toml
sync/e2ee/src/: lib.rs
sync/server/: Cargo.toml
sync/server/src/: lib.rs
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: smoke.spec.ts
tests/fuzz-corpora/redaction/: seed_pii.txt  seed_secret.txt
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: capability_and_policy.rs
tests/unit/: README.md
tests/wpt-runner/: baseline.json  compare-baseline.sh  run-wpt.sh
tools/: lowmem-cargo-config.toml
tools/fuzz/: Cargo.toml
tools/fuzz/fuzz_targets/: net_alpn.rs  redaction.rs
tools/issues/: file-forward-features.sh
tools/lint/: .eslintrc.json  run-lint.sh
tools/policy-simulator/: Cargo.toml
tools/policy-simulator/src/: main.rs
tools/repro-build/: verify-repro.sh
ui/command-palette/: package.json
ui/command-palette/src/: fuzzy.ts  index.test.ts  index.ts  omnibox.ts
ui/devtools/: package.json
ui/devtools/src/: index.ts
ui/pip/: package.json
ui/pip/src/: index.test.ts  index.ts
ui/reader/: package.json
ui/reader/src/: index.test.ts  index.ts
ui/shell-desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/shell-desktop/src/: about-pages.ts  dashboard.ts  features.test.ts  friction.ts  index.test.ts  index.ts  layouts.ts  main.css  main.ts  performance.ts  permissions.ts  privacy.ts  side-panel.ts  storage.ts  tauri-bridge.ts  theme.ts  wizard.ts
ui/shell-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/shell-desktop/src-tauri/src/: lib.rs  main.rs
ui/shell-desktop/src/apps/: native.ts
ui/shell-desktop/src/copilot/: engine.ts  worker.ts
ui/shell-desktop/src/spaces/: index.ts
ui/shell-desktop/src/tabs/: groups.ts
ui/themes/: tokens.json  userChrome.css  userContent.css
