[package]
name = "mv2-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MV2 compatibility shim: parses legacy MV2 manifests for the MV4 host"

[lib]
name = "mv2_shim"
path = "src/lib.rs"

[dependencies]
mv4-host = { path = "../mv4-host" }
