[package]
name = "sync-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sync client: encrypts records locally before upload (Chrome 5.6, Firefox 6.3)"

[lib]
name = "sync_client"
path = "src/lib.rs"

[dependencies]
e2ee = { path = "../e2ee" }
