# NOTE: This crate is intentionally NOT a member of the root Rust workspace.
# Tauri pulls a large native dependency tree (webkit2gtk, etc.) that is not
# available in the offline CI sandbox. It is built only when packaging the
# desktop app via `./build release` on a machine with the Tauri prerequisites.
[package]
name = "b2030b-shell-desktop"
version = "0.1.0"
edition = "2021"
description = "Browser 2030B desktop shell (Tauri host)"
license = "LicenseRef-Browser2030B-1.0"

[lib]
name = "b2030b_shell_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Used by build.rs to (re)generate a valid single-image icons/icon.ico that
# Windows' rc.exe accepts (single entry, ICONDIRENTRY reserved = 0).
ico = "0.3"
png = "0.17"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
